# youtube_sumarize

./: .gitignore  LICENSE  README.md  get_data.py  pyproject.toml  rick_astley.json  test.py  tracking.json  videos.json  videos_collected.csv  youtube_api.py
APIs/: youtube_api.py
data/: videos.csv  youtube_api_search.csv
examples/: transcription_8pztmXSiHvw.txt  yt-dlp_return.json
src/: analysis_dataset.py  calculate_engagement.py  evaluate_model.py  extract_metadata.py  filtered_categories.json  get_data.py  split_dataset.py  summarizer.py  tracking.json  train_model.py  transcription.py
src/APIs/: whisper_api.py  youtube_api.py  yt_dlp_api.py
